--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -47,7 +47,7 @@
             <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg"  th:href="@{/processes}"
                th:classappend="${currentPath == '/processes'} ? ' bg-blue-600'">
                 <span class="material-icons mr-3">sync_alt</span>
-                <span>Process Instances</span>
+                <span>Cases</span>
             </a>
             <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg"  th:href="@{/forms}"
                th:classappend="${currentPath == '/forms'} ? ' bg-blue-600'">
