Case management form

--- a/src/main/resources/templates/task/add.html
+++ b/src/main/resources/templates/task/add.html
@@ -71,6 +71,7 @@
             <div class="p-5" th:utext="${formHtml}"></div>
         </div>
     </div>
+    <script src="/js/caseManagement.js"></script>
 </div>
 </body>
 </html>
