--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -69,6 +69,11 @@
                 <span class="material-icons mr-3">chat</span>
                 <span>Chat</span>
             </a>
+            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/gallery}"
+               th:classappend="${currentPath == '/gallery' or currentPath == '/addFile'} ? ' bg-blue-600'">
+            <span class="material-icons mr-3">collections</span>
+                <span>Gallery</span>
+            </a>
         </nav>
     </div>
 </aside>
@@ -160,6 +165,7 @@
 <script src="https://unpkg.com/htmx.org@2.0.4"></script>
 <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
 <script src="https://unpkg.com/hyperscript.org@0.9.14/dist/_hyperscript.min.js"></script>
+<script defer src="//unpkg.com/alpinejs"></script>
 
 <!-- Custom JS -->
 <script th:src="@{/js/app.js}"></script>
